--- a/blog.qmd
+++ b/blog.qmd
@@ -14,12 +14,15 @@ title-block-banner: true
 ---
 
 # Series
-#### [fastai-series](fastai-series.qmd)
-This series contains notes from following the fastai "Practical Deep Learning for Coders" course.
-See the [course page](https://course.fast.ai/) and [book](https://github.com/fastai/fastbook/tree/master).
+#### [FastAI Series](fastai-series.qmd)
+This series contains notes from the fastai "Practical Deep Learning for Coders" [course](https://course.fast.ai/) and [related book](https://github.com/fastai/fastbook/tree/master).
 
-#### [generative-ai-series](gen-deep-learning-series.qmd)
-This series contains notes from the book "Generative Deep Learning" by David Foster.
+#### [Gen AI Series](gen-deep-learning-series.qmd)
+A series of posts on Generative AI techniques and projects.
+
+#### [React Series](react-series.qmd)
+Making pretty front-ends.
+
 
 
 # All Posts
