--- a/posts/software/react/2_js_essentials/post.qmd
+++ b/posts/software/react/2_js_essentials/post.qmd
@@ -1,6 +1,6 @@
 ---
 title: "React: JavaScript Essentials"
-description: "Part 2: WTF is JS"
+description: "Part 2: WTF is JSX"
 date: "2024-03-14"
 image: "../react.png"
 categories: [Engineering, Software, React, WebDev]
